# snowflake-cli-dagfactory

./: README.md  pyproject.toml
examples/: dag_config.yml  snowflake.yml
src/snowflake_cli_dagfactory/: __init__.py  commands.py  config.py  manager.py  plugin_spec.py  project_definition.py
tests/: test_config.py
tests/fixtures/: test_dag_config.yml  test_dag_config_list.yml
